# connector

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: connector.dart  connector_bindings_generated.dart
src/: CMakeLists.txt  connector.c
windows/: CMakeLists.txt
